[test] Add comprehensive unit tests for FastAPIApp class - Add 31 unit tests covering FastAPIApp initialization, component handling, router methods, serve functionality, error handling, and integration scenarios - Tests follow project conventions with proper mocking, fixtures, and descriptive names - Add comprehensive docstrings to BaseAPIApp and FastAPIApp classes for better documentation - Update .gitignore to exclude test-generated media files from integration tests - All tests pass and code follows ruff formatting standards

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,9 @@ token.json
 # Coverage
 coverage_report
 .coverage
+
+# Test-generated media files
+libs/agno/tests/integration/**/sample.jpg
+libs/agno/tests/integration/**/sample_image.jpg
+libs/agno/tests/integration/**/sample.png
+libs/agno/tests/integration/**/sample_image.png
