--- a/libs/agno/pyproject.toml
+++ b/libs/agno/pyproject.toml
@@ -139,6 +139,9 @@ markdown = ["unstructured", "markdown", "aiofiles"]
 # Dependencies for AG-UI integration
 agui = ["ag-ui-protocol"]
 
+# Dependencies for Django-Ninja integration
+django = ["django", "django-ninja"]
+
 # Dependencies for Embedders
 huggingface = [
     "huggingface-hub",
@@ -202,6 +205,7 @@ tools = [
   "agno[zep]",
   "agno[mem0]",
   "agno[google_bigquery]",
+  "agno[django]",
 ]
 
 # All storage
